# cash-planner

./: .env.example  .gitignore  CLAUDE.md  CORRECTION_OUVERTURE_PDF.md  Cargo.toml  README.md  data.sqlite.empty_backup  package.json  test_app_init.sh  test_db.sql  test_db_correct.sql  test_db_path  test_minio.sh  test_opener.js  test_operation_serialization.rs
.serena/: project.yml
.serena/cache/rust/: document_symbols_cache_v23-06-25.pkl
.serena/memories/: architectural_review_analysis.md  code_style_conventions.md  project_overview.md  suggested_commands.md  task_completion_checklist.md
apps/desktop/: README.md
apps/desktop/frontend/: index.html  next.config.mjs  package-lock.json  package.json  tailwind.config.cjs  tailwind.config.ts  tsconfig.json  vite.config.ts
apps/desktop/frontend/.next/: trace
apps/desktop/frontend/.next/server/: next-font-manifest.js  next-font-manifest.json  server-reference-manifest.js  server-reference-manifest.json  webpack-runtime.js
apps/desktop/frontend/src/: App.tsx  entry.dev.tsx  entry.preview.tsx  entry.spa.tsx  entry.ssr.tsx  global.css  index.css  index.tsx  root.tsx
apps/desktop/frontend/src/app/: globals.css  layout.tsx  page.tsx
apps/desktop/frontend/src/components/: CompactOperationForm.tsx  Dashboard.tsx  Layout.tsx  Modal.tsx  Navigation.tsx  Select.tsx  Simulations.tsx  index.ts
apps/desktop/frontend/src/hooks/: useDeclarationPeriod.ts  useFileUpload.ts  useOperationForm.ts
apps/desktop/frontend/src/lib/: currencyUtils.ts  declarationLogic.test.ts  declarationLogic.ts  declarationLogicAdvanced.test.ts  exportUtils.ts  fileOpener.ts  minioClient.ts  operationCategories.ts  operationFormUtils.ts  operationIndex.ts  operationMigration.ts  operationMigrationTest.ts  operationVatCalculations.ts  queries.ts  tauriClient.ts  utils.ts  vatCalculations.ts
apps/desktop/src-tauri/: Cargo.toml  dev-frontend.sh  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs
crates/app/: Cargo.toml
crates/app/src/: lib.rs
crates/domain/: Cargo.toml
crates/domain/src/: lib.rs
crates/infra/: Cargo.toml
crates/infra/migrations/: 0001_init.sql  0002_fix_english_fields.sql  0002_months.sql  0003_settings_forecast.sql  0003_yearly_planning.sql
crates/infra/src/: lib.rs  minio.rs  sqlite.rs
docs/: qwik.md  tauri.md
examples/: enhanced_features_demo.rs
(+66 files in other folders)
