[workspace]
members = [
  "crates/domain",
  "crates/app",
  "crates/infra",
  "apps/desktop/src-tauri",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "UNLICENSED"
publish = false
rust-version = "1.78"

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4"] }
tauri = { version = "2", default-features = false }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-os = "2"
tauri-plugin-updater = "2"
tauri-plugin-store = "2"
tauri-plugin-opener = "2"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio-rustls", "macros", "migrate", "sqlite", "chrono", "uuid"] }
parking_lot = "0.12"
once_cell = "1"
async-trait = "0.1"
# MinIO/S3 dependencies
rust-s3 = "0.32"
mime_guess = "2.0" 
bytes = "1"
